<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.alb.maromba.Cadastro"
    tools:showIn="@layout/activity_cadastro"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tpcadastrolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tipo de Cadastro"/>

                <Spinner
                    android:id="@+id/tpCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/TipoCadastro">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/academiaslo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descacademias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Academias"
                    android:visibility="invisible"/>

                <Spinner
                    android:id="@+id/academias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/AcademiasTeste"
                    android:visibility="invisible">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:imeActionId="@+id/nomeact"
                        android:imeActionLabel="@string/nome"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cpf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cpf"
                        android:imeActionId="@+id/cpfact"
                        android:imeActionLabel="@string/cpf"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/telefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefone"
                        android:imeActionId="@+id/foneact"
                        android:imeActionLabel="@string/telefone"
                        android:imeOptions="actionUnspecified"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/endereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/endereco"
                        android:imeActionId="@+id/enderecoact"
                        android:imeActionLabel="@string/endereco"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeActionId="@+id/emailact"
                        android:imeActionLabel="@string/email"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/webView" />

</LinearLayout>
